--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.6",
     "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.563.0",
+    "motion": "^12.33.0",
     "next": "16.1.6",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
