Refactor authentication and onboarding flow: Introduced middleware for access token validation, updated component aliases, and added new API hooks for address and profile management. Enhanced sign-in and sign-up pages with form validation and improved user experience. Created new pages for checkout and onboarding processes.

--- a/components.json
+++ b/components.json
@@ -10,8 +10,8 @@
     "cssVariables": true
   },
   "aliases": {
-    "components": "@/src/components",
-    "ui": "@/src/components/ui",
+    "components": "@/components",
+    "ui": "@/components/ui",
     "utils": "@/lib/utils"
   },
   "registries": {
