--- a/components.json
+++ b/components.json
@@ -12,7 +12,9 @@
   "aliases": {
     "components": "@/components",
     "ui": "@/components/ui",
-    "utils": "@/lib/utils"
+    "utils": "@/lib/utils",
+    "lib": "@/lib",
+    "hooks": "@/hooks"
   },
   "registries": {
     "@lucide-animated": "https://lucide-animated.com/r/{name}.json"
