--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "tailwind-merge": "^3.4.0",
+    "timepicker-ui": "^4.1.5",
+    "timepicker-ui-react": "^1.1.0",
     "zod": "^4.3.6",
     "zustand": "^5.0.8"
   },
