--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "lucide-react": "^0.563.0",
     "motion": "^12.33.0",
     "next": "16.1.6",
+    "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "razorpay": "^2.9.6",
     "react": "19.2.3",
     "react-day-picker": "^9.13.2",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "timepicker-ui": "^4.1.5",
     "timepicker-ui-react": "^1.1.0",
